@@ -20,7 +20,7 @@ moving-man.module.game.title = Game?
 
 module.introduction=Introduction
 module.coordinates=Coordinates
-module.work-energy=Work/Energy
+module.energy=Energy
 module.force-graphs=Force Graphs
 module.robotMovingCompany=Robot Moving Company
 
@@ -31,8 +31,8 @@ forces-and-motion.module.robot-moving-company.title = Robot Moving Company
 
 object.tooltip-text.pattern.kinetic_static = <html>\u03BC<sub>k</sub>={0}<br> </br>\u03BC<sub>s</sub>={1}<br> </br> </html> 
 force.abbreviation.html.pattern.abbrev = <html>F<sub>{0}</sub></html>
-controls.showWorkEnergyCharts = Show Work/Energy Chart
-controls.work-energy-charts= Work/Energy Chart
+controls.show-energy-chart = Show Energy Chart
+controls.energy-chart= Energy Chart
 controls.clear-heat = Clear Heat
 controls.show = Show
 controls.hide = Hide
@@ -61,9 +61,9 @@ forces.applied=Applied
 forces.Gravity=Gravity
 forces.Net=Sum
 forces.parallel-title = Parallel Forces
-forces.work-energy-title = Work/Energy
+forces.energy-title = Energy
 forces.parallel-title-with-units = Parallel Forces (N)
-forces.work-energy-title-with-units = Work/Energy (J)
+forces.energy-title-with-units = Energy (J)
 
 #Forces (with subscript)
 force.pattern=<html>F<sub>{0}</sub></html>
